<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TimerFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutNumberPicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"

                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hour"
                    android:textStyle="bold"
                    tools:text="Hour" />

                <LinearLayout
                    android:id="@+id/linearLayoutDivideHour"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/design_default_color_on_secondary"
                    android:orientation="vertical"
                    android:visibility="visible" />

                <NumberPicker
                    android:id="@+id/fragment_timer_hour_numberPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:descendantFocusability="blocksDescendants" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"

                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/minute"
                    android:textStyle="bold"
                    tools:text="Minute" />

                <LinearLayout
                    android:id="@+id/linearLayoutDivideMinute"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/design_default_color_on_secondary"
                    android:orientation="vertical"
                    android:visibility="visible" />

                <NumberPicker
                    android:id="@+id/fragment_timer_minute_numberPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:descendantFocusability="blocksDescendants" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"

                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/second"
                    android:textStyle="bold"
                    tools:text="Second" />

                <LinearLayout
                    android:id="@+id/linearLayoutDivideSecond"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/design_default_color_on_secondary"
                    android:orientation="vertical"
                    android:visibility="visible" />

                <NumberPicker
                    android:id="@+id/fragment_timer_second_numberPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:descendantFocusability="blocksDescendants" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTimerCountDown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:orientation="horizontal"
            tools:visibility="visible">

            <TextView
                android:id="@+id/fragment_timer_Hour_TextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="72sp"
                android:text="00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="36sp"
                android:text=":" />

            <TextView
                android:id="@+id/fragment_timer_Minute_TextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="72sp"
                android:text="00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="36sp"
                android:text=":" />

            <TextView
                android:id="@+id/fragment_timer_Second_TextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="72sp"
                android:text="00" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <ToggleButton
                android:id="@+id/fragment_timer_MuteSwitch"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/toggle_selector"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <TextView
                android:id="@+id/fragment_timer_MuteStateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checkMarkTintMode="screen"
                android:gravity="center_horizontal"
                android:textColor="@color/colorNotificationSetState"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/fragment_timer_MuteSwitch"
                app:layout_constraintStart_toStartOf="@+id/fragment_timer_MuteSwitch"
                app:layout_constraintTop_toBottomOf="@+id/fragment_timer_MuteSwitch"
                tools:text="@string/notification" />


            <TextView
                android:id="@+id/fragment_timer_MuteStateExpTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:checkMarkTintMode="screen"
                android:gravity="center_horizontal"
                android:textColor="@color/colorNotificationSetState"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_timer_MuteStateTextView"
                tools:text="@string/notificationExp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/fragment_timer_StartTimer_Button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_play_circle_filled_blue_24dp"
                android:visibility="visible"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/fragment_timer_StopTimer_Button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_cancel_blue_24dp"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>